--- a/data/template.html
+++ b/data/template.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 
+<div class="header">
+    <a href="/">mlesniak.com</a>
+    <a href="202009010533 about" class="pull-right">About</a>
+</div>
+
 ${content}
 
 </body>
