--- a/data/template.html
+++ b/data/template.html
@@ -206,6 +206,13 @@
             margin-bottom: 20px;
             border-bottom: 1px solid #cccccc;
         }
+
+        h1 > a {
+            color:#333333;
+        }
+        h1 > a:hover {
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
