Change tag color

--- a/data/template.html
+++ b/data/template.html
@@ -213,6 +213,11 @@
         h1 > a:hover {
             text-decoration: none;
         }
+
+        .tag {
+            font-family: "Courier New";
+            color: darkgray;
+        }
     </style>
 </head>
 <body>
