Add bug description

--- a/data/template.html
+++ b/data/template.html
@@ -216,10 +216,16 @@
             cursor: pointer;
         }
 
+
+
         .tag {
             font-family: "Courier New";
             color: darkgray;
             font-size: 1em;
+        }
+
+        h1 *> .tag {
+            /*Intentionally empty*/
         }
     </style>
 </head>
