Fix header rendering in tag list

--- a/data/template.html
+++ b/data/template.html
@@ -216,16 +216,15 @@
             cursor: pointer;
         }
 
-
-
         .tag {
             font-family: "Courier New";
             color: darkgray;
             font-size: 1em;
         }
 
-        h1 *> .tag {
-            /*Intentionally empty*/
+        h1 a.tag {
+            color: #333333;
+            font-family: sans-serif, "Helvetica", "Arial", sans-serif;
         }
     </style>
 </head>
