--- a/data/template.html
+++ b/data/template.html
@@ -18,7 +18,7 @@
             /* border-right: 1px solid #eee; */
             padding-right: 2em;
             font-family: sans-serif, "Helvetica", "Arial", sans-serif;
-            font-size: 1.2em;
+            font-size: 1em;
             /*text-align: justify;*/
             color: #333333;
         }
@@ -219,7 +219,7 @@
         .tag {
             font-family: "Courier New";
             color: darkgray;
-            font-size: 1em;
+            font-size: 0.8em;
         }
 
         h1 a.tag {
@@ -232,7 +232,7 @@
 
 <div class="header">
     <a href="/">mlesniak.com</a>
-    <a href="202009010533 about" class="pull-right">About</a>
+    <a href="/202009010533 about" class="pull-right">About</a>
 </div>
 
 ${content}
