Change about file name

--- a/data/template.html
+++ b/data/template.html
@@ -232,7 +232,7 @@
 
 <div class="header">
     <a href="/">mlesniak.com</a>
-    <a href="/202009010533 About" class="pull-right">About</a>
+    <a href="/202009010533 About me" class="pull-right">About</a>
 </div>
 
 ${content}
