--- a/data/template.html
+++ b/data/template.html
@@ -234,11 +234,14 @@
 <div class="header">
     <a href="/">mlesniak.com</a>
 
-    <a href="/202009010533 About me" class="pull-right"><img src="/static/about.svg" width="16"/></a>
+    <a class="ignore-for-backlinks" href="/202009010533 About me" class="pull-right"><img src="/static/about.svg"
+                                                                                          width="16"/></a>
     <a href="mailto:mail@mlesniak.com" class="pull-right"><img src="/static/email.svg" width="16"/></a>
     <a href="https://github.com/mlesniak/" class="pull-right"><img src="/static/github.svg" width="16"/></a>
-    <a href="https://www.xing.com/profile/Michael_Lesniak/cv" class="pull-right"><img src="/static/xing.svg" width="16"/></a>
-    <a href="https://www.linkedin.com/in/dr-michael-lesniak-1577a315//cv" class="pull-right"><img src="/static/linkedin.svg" width="16"/></a>
+    <a href="https://www.xing.com/profile/Michael_Lesniak/cv" class="pull-right"><img src="/static/xing.svg"
+                                                                                      width="16"/></a>
+    <a href="https://www.linkedin.com/in/dr-michael-lesniak-1577a315//cv" class="pull-right"><img
+                src="/static/linkedin.svg" width="16"/></a>
     <a href="https://twitter.com/mlesniak" class="pull-right"><img src="/static/twitter.svg" width="16"/></a>
 </div>
 
