Show backlinks as code on each page

--- a/data/template.html
+++ b/data/template.html
@@ -234,7 +234,7 @@
 <div class="header">
     <a href="/">mlesniak.com</a>
 
-    <a class="ignore-for-backlinks" href="/202009010533 About me" class="pull-right"><img src="/static/about.svg"
+    <a class="ignore-for-backlinks pull-right" href="/202009010533 About me"><img src="/static/about.svg"
                                                                                           width="16"/></a>
     <a href="mailto:mail@mlesniak.com" class="pull-right"><img src="/static/email.svg" width="16"/></a>
     <a href="https://github.com/mlesniak/" class="pull-right"><img src="/static/github.svg" width="16"/></a>
@@ -246,6 +246,8 @@
 </div>
 
 {{content}}
+
+{{backlinks}}
 
 </body>
 </html>
