--- a/data/template.html
+++ b/data/template.html
@@ -202,6 +202,12 @@
             list-style-type: square;
         }
 
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         .header {
             margin-bottom: 20px;
             padding-bottom: 5px;
